added play on forms options

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "davidpiesse/nova-audio",
+    "name": "kayacekovic/nova-audio",
     "description": "Audio Field for Laravel Nova",
     "keywords": [
         "laravel",
